--- a/config.org
+++ b/config.org
@@ -206,7 +206,7 @@ Utility functions for frame management. These find frames, suspend frames, raise
   "Returns a list of frames with frame-name."
   (remove-if-not
    (lambda (x)
-     (string= (frame-parameter x 'name) frame-name))
+     (string= (frame-parameter x 'frame-name) frame-name))
    (frame-list)))
 
 (defun efm/maximized-p (frame)
@@ -219,7 +219,7 @@ Utility functions for frame management. These find frames, suspend frames, raise
                                               (title . ,frame-title)
                                               (fullscreen . maximized)
                                               (window-system . x)))
-  (let ((frame (car (efm/find-frame name))))
+  (let ((frame (car (efm/find-frame frame-name))))
     (frame-focus frame)
     (x-focus-frame frame)))
 
@@ -448,7 +448,8 @@ Use Gmail in gnus
 **** Directory path for eshell-directory-name
 #+BEGIN_SRC emacs-lisp
 (after! eshell-z
-  (setq! eshell-directory-name (concat doom-private-dir "eshell")))
+  (setq! eshell-directory-name (concat doom-private-dir "eshell"))
+  (setq! eshell-aliases-file (concat doom-private-dir "eshell/alias")))
 #+END_SRC
 **** Custom magit commands in eshell
 #+BEGIN_SRC emacs-lisp
