--- a/config.org
+++ b/config.org
@@ -33,11 +33,12 @@ Doom exposes five (optional) variables for controlling fonts in Doom. Here are t
 - ~doom-font~
 - ~doom-variable-pitch-font~
 - ~doom-big-font~ -- used for ~doom-big-font-mode~ Use this for presentations or streaming.
-They all accept either a font-spec, font string ("Input Mono-12"), or xlfd font string. You generally only need these two:
+They all accept either a font-spec, font string ("Input Mono-12"), or xlfd font string. You generally
+only need these two:
 #+BEGIN_SRC emacs-lisp
 ;;(setq doom-font (font-spec :family "Iosevka Term" :size 18))
-(setq doom-font (font-spec :family "Roboto Mono" :size 16))
-;;(setq doom-variable-pitch-font (font-spec :family "Roboto Mono" :size 18))
+(setq doom-font (font-spec :family "Iosevka Fixed" :size 18))
+(setq doom-variable-pitch-font (font-spec :family "ETBookOT"))
 #+END_SRC
 ** Mixed-pitch Fonts
 *** Package
