--- a/config.org
+++ b/config.org
@@ -36,7 +36,7 @@ Doom exposes five (optional) variables for controlling fonts in Doom. Here are t
 They all accept either a font-spec, font string ("Input Mono-12"), or xlfd font string. You generally
 only need these two:
 #+BEGIN_SRC emacs-lisp
-(setq doom-font (font-spec :family "Iosevka Fixed" :size 18))
+(setq doom-font (font-spec :family "Iosevka" :size 18))
 (setq doom-variable-pitch-font (font-spec :family "ETBookOT"))
 #+END_SRC
 ** Mixed-pitch Fonts
