Add support for java and gdscript. Correct the path for org-directory.

--- a/config.org
+++ b/config.org
@@ -708,7 +708,7 @@ Because nix is now installing git from my package choices, I need to make sure m
 ** Org files location
 If you use `org' and don't want your org files in the default location below, change `org-directory'. It must be set before org loads!
 #+BEGIN_SRC emacs-lisp
-(setq! org-directory "~/org")
+(setq! org-directory "~/org-files")
 #+END_SRC
 ** Basic Config
 #+BEGIN_SRC emacs-lisp
